# SUPERMARKET_GREENMART_CHATBOT

./: .env.example  .gitignore  README.md  app.py  build_index.py  pyproject.toml  requirements.txt  train_intent_model.py
backend/: main.py
backend/middleware/: pipeline.py
backend/routes/: chat.py
backend/services/: classifier_service.py  gemini_service.py  retrieval_service.py
classifier/: intent_model.pkl  labeled_intents.csv
data/: store_data.json
data/raw/: products.csv
frontend/: chat.html  index.html
prompts/: system_prompt.py
retrieval/: product_index.pkl  search.py
