[project]
name = "greenmart-chatbot"
version = "1.0.0"
description = "GreenMart AI Supermarket Chatbot"
requires-python = ">=3.12"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "pydantic",
    "google-genai",
    "python-dotenv",
    "scikit-learn",
    "pandas",
    "sentence-transformers",
    "numpy",
]

[tool.vercel]
entrypoint = "backend.main:app"